@slidy/svelte - improve transpilation

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -12,7 +12,15 @@
         //     "src/types.ts"
         // ]
     },
-    "include": ["src/*"],
-    "exclude": ["node_modules/*", "dist/*", "dev/*"],
-    "files": ["./src/index.ts"]
+    "include": [
+        "src/*"
+    ],
+    "exclude": [
+        "node_modules/*",
+        "dist/*",
+        "dev/*"
+    ],
+    "files": [
+        "./src/index.ts"
+    ]
 }
