fix(slidy-core): update types

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "declarationDir": "dist/",
+        "lib": [ "DOM", "ESNext" ]
     },
     "include": [
         "src/*"
