--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,7 +2,10 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "declarationDir": "dist/",
-        "lib": [ "DOM", "ESNext" ]
+        "lib": [
+            "DOM",
+            "ESNext"
+        ]
     },
     "include": [
         "src/*"
