--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
-    "types": "dist/index.d.ts",
+    "types": "dist/types.d.ts",
     "type": "module",
     "files": [
         "dist/*"
@@ -24,7 +24,7 @@
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
         "dev:react": "node esbuild --dev",
-        "build": "rm -rf dist && node esbuild && tsc --emitDeclarationOnly --outDir dist",
+        "build": "rm -rf dist && node esbuild && tsc",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
         "prelint": "pnpm run format",
