--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "node esbuild --dev",
-        "dev:www": "pnpm dev --parallel --filter=slidy...",
+        "dev:www": "pnpm dev --filter=www... --parallel",
         "dev:core": "pnpm dev:core --parallel",
         "dev:svelte": "pnpm dev:svelte --parallel",
         "dev:react": "pnpm dev:react --parallel",
