--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:www": "pnpm dev --filter=www... --parallel",
+        "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
         "dev:core": "pnpm dev:core --parallel",
         "dev:svelte": "pnpm dev:svelte --parallel",
         "dev:react": "pnpm dev:react --parallel",
-        "build": "node esbuild",
-        "build:www": "pnpm build -r",
+        "build:www": "pnpm build --filter=@slidy/www",
         "build:core": "pnpm build --filter=@slidy/core",
         "build:svelte": "pnpm build --filter=@slidy/svelte",
         "build:react": "pnpm build --filter=@slidy/react",
