--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "build:svelte": "pnpm build --filter=@slidy/svelte",
         "build:react": "pnpm build --filter=@slidy/react",
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
-        "start": "npx derver --production --port=5555 www/public",
-        "deploy": "pnpm build:www && gh-pages -d www/public",
+        "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm pub -r"
     },
     "repository": {
