--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,37 +31,6 @@
         "pub": "pnpm build && pnpm publish --no-git-checks --access public",
         "format": "prettier --ignore-path ../../.gitignore --write './src/**/*.{js,ts,md,json,html,css}'"
     },
-    "eslintConfig": {
-        "extends": [
-            "plugin:@typescript-eslint/recommended"
-        ],
-        "plugins": [
-            "@typescript-eslint"
-        ],
-        "parser": "@typescript-eslint/parser",
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "rules": {
-            "semi": 0,
-            "no-underscore-dangle": 0,
-            "import/prefer-default-export": 0
-        }
-    },
-    "prettier": {
-        "semi": true,
-        "tabWidth": 4,
-        "printWidth": 120,
-        "singleQuote": true,
-        "svelteSortOrder": "options-markup-scripts-styles",
-        "svelteStrictMode": true,
-        "svelteAllowShorthand": true,
-        "svelteIndentScriptAndStyle": true,
-        "plugins": [
-            "prettier-plugin-svelte"
-        ]
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Valexr/slidy.git"
@@ -80,16 +49,5 @@
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
-    "homepage": "https://valexr.github.io/slidy",
-    "devDependencies": {
-        "@types/eslint": "^8.4.1",
-        "@typescript-eslint/eslint-plugin": "^5.15.0",
-        "@typescript-eslint/parser": "^5.15.0",
-        "derver": "^0.5.3",
-        "esbuild": "^0.14.27",
-        "esbuild-plugin-eslinter": "^0.1.2",
-        "eslint": "^8.11.0",
-        "tslib": "^2.3.1",
-        "typescript": "^4.6.2"
-    }
+    "homepage": "https://valexr.github.io/slidy"
 }
