--- a/packages/malina/package.json
+++ b/packages/malina/package.json
@@ -9,8 +9,7 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "derver": "^0.5.3",
-        "esbuild": "^0.13.15",
-        "malinajs": "^0.6.x"
+        "@slidy/core": "workspace:*",
+        "malinajs": "^0.6.52"
     }
 }
