--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,7 +45,6 @@
         "@types/react": "^17.0.41",
         "@types/react-dom": "^17.0.14",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "typescript": "^4.6.2"
+        "react-dom": "^17.0.2"
     }
 }
