--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@slidy/www",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "scripts": {
         "dev": "svelte-kit dev",
         "build": "svelte-kit build",
@@ -27,9 +27,7 @@
         "prettier-plugin-svelte": "^2.6.0",
         "svelte": "^3.46.4",
         "svelte-check": "^2.4.6",
-        "svelte-preprocess": "^4.10.4",
-        "tslib": "^2.3.1",
-        "typescript": "~4.6.2"
+        "svelte-preprocess": "^4.10.4"
     },
     "type": "module"
 }
