--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
         "eslint": "^8.11.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^3.4.1",
+        "open-props": "^1.3.9",
         "prettier": "^2.6.0",
         "prettier-plugin-svelte": "^2.6.0",
         "svelte": "^3.46.4",
