--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -57,18 +57,18 @@
 	"devDependencies": {
 		"@slidy/core": "workspace:*",
 		"@tsconfig/svelte": "^3.0.0",
-		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.15.0",
-		"@typescript-eslint/parser": "^5.15.0",
+		"@types/node": "^17.0.22",
+		"@typescript-eslint/eslint-plugin": "^5.16.0",
+		"@typescript-eslint/parser": "^5.16.0",
 		"css-tree": "^2.1.0",
 		"esbuild-svelte": "^0.6.3",
 		"eslint": "^8.11.0",
 		"eslint-plugin-svelte3": "^3.4.1",
+		"prettier-plugin-svelte": "^2.6.0",
 		"svelte": "^3.46.4",
 		"svelte-check": "^2.4.6",
 		"svelte-preprocess": "^4.10.4",
-		"svelte2tsx": "^0.5.6",
-		"prettier-plugin-svelte": "^2.6.0"
+		"svelte2tsx": "^0.5.6"
 	},
 	"peerDependencies": {
 		"svelte": "^3.42.4"
