--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,7 @@
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
         "dev:react": "node esbuild --dev",
-        "build": "rm -rf dist && node esbuild && tsc && rm -rf dist/utils",
+        "build": "rm -rf dist && node esbuild && tsc || rm -rf dist/utils",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
         "prelint": "pnpm run format",
