up & cleanup deps/devops

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
         "dev:core": "pnpm dev:core --parallel",
         "dev:svelte": "pnpm dev:svelte --parallel",
-        "dev:react": "pnpm dev:react --parallel",
+        "dev:react": "pnpm dev --filter=@slidy/react... --parallel",
+        "dev:malina": "pnpm dev --filter=@slidy/malina... --parallel",
         "build:www": "pnpm build --filter=@slidy/www",
         "build:core": "pnpm build --filter=@slidy/core",
         "build:svelte": "pnpm build --filter=@slidy/svelte",
@@ -77,9 +78,9 @@
         "@typescript-eslint/eslint-plugin": "^5.16.0",
         "@typescript-eslint/parser": "^5.16.0",
         "derver": "^0.5.3",
-        "esbuild": "^0.14.27",
+        "esbuild": "^0.14.28",
         "esbuild-plugin-eslinter": "^0.1.2",
-        "eslint": "^8.11.0",
+        "eslint": "^8.12.0",
         "gh-pages": "^3.2.3",
         "prettier": "^2.6.1",
         "sass": "^1.49.9",
