@slidy/core - clamp & indent edges 🤓

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
         "rules": {
             "semi": 0,
             "no-underscore-dangle": 0,
-            "import/prefer-default-export": 0
+            "import/prefer-default-export": 0,
+            "@typescript-eslint/no-explicit-any": "off"
         }
     },
     "prettier": {
