--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev:wc": "pnpm dev --filter=@slidy/wc... --parallel",
         "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
         "dev:core": "pnpm dev:core --parallel",
-        "dev:svelte": "pnpm dev:svelte --parallel",
         "dev:react": "pnpm dev --filter=@slidy/react... --parallel",
         "dev:malina": "pnpm dev --filter=@slidy/malina... --parallel",
+        "dev:svelte": "pnpm dev:svelte --parallel",
         "build:www": "pnpm build --filter=@slidy/www",
         "build:core": "pnpm build --filter=@slidy/core",
         "build:svelte": "pnpm build --filter=@slidy/svelte",
@@ -79,7 +80,7 @@
         "@typescript-eslint/eslint-plugin": "^5.17.0",
         "@typescript-eslint/parser": "^5.17.0",
         "derver": "^0.5.3",
-        "esbuild": "^0.14.28",
+        "esbuild": "^0.14.29",
         "esbuild-plugin-eslinter": "^0.1.2",
         "eslint": "^8.12.0",
         "gh-pages": "^3.2.3",
