--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "esbuild-plugin-eslinter": "^0.1.2",
         "eslint": "^8.12.0",
         "gh-pages": "^3.2.3",
+        "open-props": "^1.3.12",
         "prettier": "^2.6.1",
         "sass": "^1.49.11",
         "tslib": "^2.3.1",
