@slidy/solid - init

--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
         "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
         "dev:core": "pnpm dev:core --parallel",
         "dev:react": "pnpm dev --filter=@slidy/react... --parallel",
+        "dev:solid": "pnpm dev --filter=@slidy/solid... --parallel",
         "dev:malina": "pnpm dev --filter=@slidy/malina... --parallel",
         "dev:svelte": "pnpm dev:svelte --parallel",
         "build:wc": "pnpm build --filter=@slidy/wc",
         "build:vue": "pnpm build --filter=@slidy/vue",
         "build:www": "pnpm build --filter=@slidy/www",
         "build:core": "pnpm build --filter=@slidy/core",
-        "build:svelte": "pnpm build --filter=@slidy/svelte",
         "build:react": "pnpm build --filter=@slidy/react",
+        "build:solid": "pnpm build --filter=@slidy/solid",
+        "build:malina": "pnpm build --filter=@slidy/malina",
+        "build:svelte": "pnpm build --filter=@slidy/svelte",
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
         "pub": "pnpm pub -r"
