--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@slidy/vue",
+    "name": "@slidy/solid",
     "version": "1.0.0",
-    "description": "Simple, configurable & reusable carousel component built with VueJS",
+    "description": "Simple, configurable & reusable carousel component built with SolidJS",
     "main": "dist/slidy.cjs",
     "module": "dist/slidy.mjs",
     "browser": "dist/slidy.js",
@@ -32,20 +32,17 @@
         "Carousel",
         "React-plugin"
     ],
-    "author": "Valexr",
+    "author": "EricRovell",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
     "homepage": "https://valexr.github.io/slidy",
+    "dependencies": {
+        "solid-js": "^1.3.13"
+    },
     "devDependencies": {
         "@slidy/core": "workspace:*",
-        "@vue/eslint-config-prettier": "^7.0.0",
-        "@vue/eslint-config-typescript": "^10.0.0",
-        "@vue/tsconfig": "^0.1.3",
-        "esbuild-plugin-vue3": "^0.3.0",
-        "eslint-plugin-vue": "^8.5.0",
-        "vue-tsc": "^0.33.9",
-        "vue": "^3.2.31"
+        "esbuild-plugin-solid": "^0.4.2"
     }
 }
