@slidy/core - improve esbuild config

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
         "dev:wc": "pnpm dev --filter=@slidy/wc... --parallel",
         "dev:vue": "pnpm dev --filter=@slidy/vue... --parallel",
         "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
-        "dev:core": "pnpm dev:core --parallel",
+        "dev:core": "pnpm dev:core --filter=@slidy/core... --parallel",
         "dev:react": "pnpm dev --filter=@slidy/react... --parallel",
         "dev:solid": "pnpm dev --filter=@slidy/solid... --parallel",
         "dev:malina": "pnpm dev --filter=@slidy/malina... --parallel",
-        "dev:svelte": "pnpm dev:svelte --parallel",
+        "dev:svelte": "pnpm dev:svelte --filter=@slidy/svelte... --parallel",
         "build:wc": "pnpm build --filter=@slidy/wc",
         "build:vue": "pnpm build --filter=@slidy/vue",
         "build:www": "pnpm build --filter=@slidy/www",
@@ -92,7 +92,7 @@
         "eslint": "^8.12.0",
         "gh-pages": "^3.2.3",
         "open-props": "^1.3.12",
-        "prettier": "^2.6.1",
+        "prettier": "^2.6.2",
         "sass": "^1.49.11",
         "tslib": "^2.3.1",
         "typescript": "^4.6.3"
