--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -38,14 +38,26 @@
         "url": "https://github.com/Valexr/slidy/issues"
     },
     "homepage": "https://valexr.github.io/slidy",
+    "eslintConfig": {
+        "extends": [
+            "plugin:vue/vue3-recommended"
+        ],
+        "parser": "vue-eslint-parser",
+        "parserOptions": {
+            "parser": "@typescript-eslint/parser",
+            "sourceType": "module"
+        },
+        "rules": {}
+    },
     "devDependencies": {
         "@slidy/core": "workspace:*",
+        "@vue/compiler-sfc": "^3.2.31",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^10.0.0",
         "@vue/tsconfig": "^0.1.3",
-        "esbuild-plugin-vue3": "^0.3.0",
+        "esbuild-plugin-vue-next": "^0.1.4",
         "eslint-plugin-vue": "^8.5.0",
-        "vue-tsc": "^0.33.9",
-        "vue": "^3.2.31"
+        "vue": "^3.2.31",
+        "vue-tsc": "^0.33.9"
     }
 }
