--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,7 +4,10 @@
         "declarationDir": "dist/",
         "lib": [
             "DOM"
-        ]
+        ],
+        // "types": [
+        //     "@types"
+        // ]
     },
     "include": [
         "src/*"
