--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -21,6 +21,7 @@
     },
     "scripts": {
         "dev": "node esbuild --dev",
+        "dev:core": "node esbuild --dev",
         "build": "rm -rf dist && node esbuild && tsc",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
