--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@playwright/test": "^1.21.0",
         "@slidy/svelte": "workspace:*",
+        "@slidy/media": "workspace:*",
         "@sveltejs/adapter-static": "^1.0.0-next.29",
         "@sveltejs/kit": "^1.0.0-next.314",
         "eslint-config-prettier": "^8.5.0",
