--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -46,7 +46,7 @@
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
-    "homepage": "https://valexr.github.io/slidy",
+    "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/wc",
     "devDependencies": {
         "@slidy/core": "workspace:*"
     }
