--- a/packages/malina/package.json
+++ b/packages/malina/package.json
@@ -8,6 +8,7 @@
         "surge": "cd public && npx surge"
     },
     "license": "MIT",
+    "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/malina",
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "malinajs": "^0.6.56"
