--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,7 +37,7 @@
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
-    "homepage": "https://valexr.github.io/slidy",
+    "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/react",
     "devDependencies": {
         "@slidy/core": "workspace:*",
         "@types/react": "^17.0.44",
