--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -37,7 +37,7 @@
     "bugs": {
         "url": "https://github.com/Valexr/slidy/issues"
     },
-    "homepage": "https://valexr.github.io/slidy",
+    "homepage": "https://github.com/Valexr/Slidy/tree/master/packages/solid",
     "dependencies": {
         "solid-js": "^1.3.15"
     },
