--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -52,7 +52,7 @@
 	"bugs": {
 		"url": "https://github.com/Valexr/slidy/issues"
 	},
-	"homepage": "https://valexr.github.io/slidy",
+	"homepage": "https://github.com/Valexr/Slidy/tree/master/packages/svelte",
 	"devDependencies": {
 		"@slidy/core": "workspace:*",
 		"@tsconfig/svelte": "^3.0.0",
