--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "build:media": "pnpm build --filter=@slidy/media",
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
-        "pub": "pnpm pub -r"
+        "pub": "pnpm pub -r",
+        "pub:core": "pnpm pub --filter=@slidy/core"
     },
     "repository": {
         "type": "git",
