--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:wc": "pnpm dev --filter=@slidy/wc... --parallel",
-        "dev:vue": "pnpm dev --filter=@slidy/vue... --parallel",
-        "dev:www": "pnpm dev --filter=@slidy/www... --parallel",
-        "dev:core": "pnpm dev:core --filter=@slidy/core... --parallel",
-        "dev:react": "pnpm dev --filter=@slidy/react... --parallel",
-        "dev:solid": "pnpm dev --filter=@slidy/solid... --parallel",
-        "dev:malina": "pnpm dev --filter=@slidy/malina... --parallel",
-        "dev:svelte": "pnpm dev:svelte --filter=@slidy/svelte... --parallel",
-        "dev:media": "pnpm dev --filter=@slidy/media",
-        "build:wc": "pnpm build --filter=@slidy/wc",
-        "build:vue": "pnpm build --filter=@slidy/vue",
-        "build:www": "pnpm build --filter=@slidy/www",
-        "build:core": "pnpm build --filter=@slidy/core",
-        "build:react": "pnpm build --filter=@slidy/react",
-        "build:solid": "pnpm build --filter=@slidy/solid",
-        "build:malina": "pnpm build --filter=@slidy/malina",
-        "build:svelte": "pnpm build --filter=@slidy/svelte",
-        "build:media": "pnpm build --filter=@slidy/media",
+        "dev:wc": "pnpm --filter=@slidy/wc... --parallel dev",
+        "dev:vue": "pnpm --filter=@slidy/vue... --parallel dev",
+        "dev:www": "pnpm --filter=@slidy/www... --parallel dev",
+        "dev:core": "pnpm --filter=@slidy/core... --parallel dev:core",
+        "dev:react": "pnpm --filter=@slidy/react... --parallel dev",
+        "dev:solid": "pnpm --filter=@slidy/solid... --parallel dev",
+        "dev:malina": "pnpm --filter=@slidy/malina... --parallel dev",
+        "dev:svelte": "pnpm --filter=@slidy/svelte... --parallel dev:svelte",
+        "dev:media": "pnpm --filter=@slidy/media dev",
+        "build:wc": "pnpm --filter=@slidy/wc build",
+        "build:vue": "pnpm --filter=@slidy/vue build",
+        "build:www": "pnpm --filter=@slidy/www build",
+        "build:core": "pnpm --filter=@slidy/core build",
+        "build:react": "pnpm --filter=@slidy/react build",
+        "build:solid": "pnpm --filter=@slidy/solid build",
+        "build:malina": "pnpm --filter=@slidy/malina build",
+        "build:svelte": "pnpm --filter=@slidy/svelte build",
+        "build:media": "pnpm --filter=@slidy/media build",
         "format": "prettier --ignore-path .gitignore packages/svelte --write '**/*.{js,ts,md,json,html,css}'",
         "deploy": "pnpm build:www && gh-pages -d www/build",
-        "pub": "pnpm pub -r",
-        "pub:core": "pnpm pub --filter=@slidy/core"
+        "pub": "pnpm -r pub",
+        "pub:core": "pnpm --filter=@slidy/core pub"
     },
     "repository": {
         "type": "git",
