--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,13 +17,14 @@
             "require": "./dist/index.cjs",
             "browser": "./dist/index.js"
         },
-        "./package.json": "./package.json"
+        "./package.json": "./package.json",
+        "./dist/utils/easing": "./dist/utils/easing.js"
     },
     "scripts": {
         "dev": "node esbuild --dev",
         "dev:core": "node esbuild --core",
         "dev:svelte": "node esbuild --dev",
-        "build": "rm -rf dist && node esbuild && tsc && rm -rf dist/utils",
+        "build": "rm -rf dist && node esbuild && tsc",
         "lint": "eslint './src/**/*.{js,ts}'",
         "lint:fix": "eslint --fix './src/**/*.{js,ts}'",
         "prelint": "pnpm run format",
